setting up figwheel

--- a/resources/public/dev/index.html
+++ b/resources/public/dev/index.html
@@ -3,11 +3,10 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <meta charset="UTF-8">
+        <link href="style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <div id="app" />
-        <script src="js/shared.js" ></script>
-        <script src="js/refresh.js"></script>
-        <script>refresh_example.start()</script>
+        <script src="/cljs-out/shared.js" ></script>
+        <script src="/cljs-out/dev-main.js"></script>
     </body>
 </html>
